--- a/public/css/dashboard/css/notifications.css
+++ b/public/css/dashboard/css/notifications.css
@@ -22,7 +22,7 @@ div.notifications h4 {
 }
 
 div.notifications div {
-    background: #000 url("/img/chrome/element_bkgd.gif") repeat-x top;
+    background: #000 url("/img/element_bkgd.gif") repeat-x top;
     margin-bottom: 10px;
     padding: 8px;
     border: 2px solid #444;
