--- a/public/css/sploder_v2p16.css
+++ b/public/css/sploder_v2p16.css
@@ -12,7 +12,7 @@
 body {
     padding: 0;
     margin: 0;
-    background: #32103C url('/img/chrome/v2-body-bkgd.jpg') repeat-x top;
+    background: #32103C url('/img/v2-body-bkgd.jpg') repeat-x top;
     font-family: Verdana, Arial, Helvetica, sans-serif;
     vertical-align: top;
     text-align: center;
@@ -110,8 +110,8 @@ cite {
     float: left;
     width: 200px;
     height: 82px;
-    background: transparent url('/img/chrome/v2-chrome-main.png') no-repeat top left;
-    _background-image: url('/img/chrome/v2-chrome-main.gif');
+    background: transparent url('/img/v2-chrome-main.png') no-repeat top left;
+    _background-image: url('/img/v2-chrome-main.gif');
 }
 
 #title h1 {
@@ -162,7 +162,7 @@ cite {
     font-size: 12px;
     line-height: 16px;
     height: 18px;
-    background-image: url('/img/chrome/input_bkgd_header.jpg');
+    background-image: url('/img/input_bkgd_header.jpg');
     border: 1px solid #7b8eac;
 }
 
@@ -172,13 +172,13 @@ cite {
     font-weight: bold;
     color: #ec0;
     height: 26px !important;
-    background-image: url('/img/chrome/button_bkgd_small.jpg');
+    background-image: url('/img/button_bkgd_small.jpg');
 }
 
 #tools div.boostpoints {
     display: block;
     float: left;
-    background: #909 url('/img/chrome/coin.png') no-repeat 5px !important;
+    background: #909 url('/img/coin.png') no-repeat 5px !important;
         font-size: 12px;
         padding: 0 8px 0 25px;
         line-height: 26px;
@@ -214,8 +214,8 @@ body#home #tools a.dashlink {
     color: #eef;
     height: 33px;
     line-height: 33px !important;
-    background: url('/img/chrome/v2-chrome-main.png') no-repeat -328px 0 transparent;
-    _background-image: url('/img/chrome/v2-chrome-main.gif');
+    background: url('/img/v2-chrome-main.png') no-repeat -328px 0 transparent;
+    _background-image: url('/img/v2-chrome-main.gif');
 }
 
 #topnav li#nav1 a {
@@ -370,7 +370,7 @@ body#creators #subnav .nav_creators {
     padding: 20px 0;
     width: 100%;
     height: 140px;
-    background: transparent url('/img/chrome/v2-bottom-bkgd.jpg') repeat-x bottom;
+    background: transparent url('/img/v2-bottom-bkgd.jpg') repeat-x bottom;
 }
 
 #bottomnav ul {
@@ -409,7 +409,7 @@ body#home div.homebuttons {
 }
 
 body#home .sprite_button {
-    background: #000 url('/img/chrome/homepage_buttons.gif') no-repeat -2px -2px;
+    background: #000 url('/img/homepage_buttons.gif') no-repeat -2px -2px;
 }
 body#home div.homebuttons .sprite_button {
     width: 180px;
@@ -532,7 +532,7 @@ ul.note li {
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
-    background: #2854a3 url('/img/chrome/icons_status.png') no-repeat -290px -110px;
+    background: #2854a3 url('/img/icons_status.png') no-repeat -290px -110px;
 }
 
 .promo div,
@@ -637,7 +637,7 @@ input.postbutton {
     font-size: 15px;
     color: #ec0;
     padding: 6px 12px;
-    background-image: url('/img/chrome/button_bkgd.jpg');
+    background-image: url('/img/button_bkgd.jpg');
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
 
@@ -678,7 +678,7 @@ input.postbutton {
 
 input,
 textarea {
-    background-image: url('/img/chrome/input_bkgd.gif');
+    background-image: url('/img/input_bkgd.gif');
     border: 1px solid #89a;
     font-size: 13px;
     padding: 3px;
@@ -706,7 +706,7 @@ div.gameobject,
 p.graph {
     width: 570px;
     height: 220px;
-    background-image: url('/img/chrome/graph_loading.gif');
+    background-image: url('/img/graph_loading.gif');
 }
 
 p.graph img {
@@ -720,7 +720,7 @@ p.graph img {
 
 .set,
 .description {
-    background: #234 url('/img/chrome/noise.png') repeat;
+    background: #234 url('/img/noise.png') repeat;
     _background-image: none;
     border: 1px solid #567;
     clear: both;
@@ -796,7 +796,7 @@ span.button a,
 div.button a,
 input.post_button {
     border: 1px solid #567;
-    background: url('/img/chrome/button_bkgd_small.jpg') repeat-x top;
+    background: url('/img/button_bkgd_small.jpg') repeat-x top;
     padding: 8px 12px;
     margin-left: 10px;
     white-space: nowrap;
@@ -914,7 +914,7 @@ span.page_button_inactive {
 
 a.page_next {
     border-color: #567;
-    background: url('/img/chrome/button_bkgd_small.jpg') repeat-x;
+    background: url('/img/button_bkgd_small.jpg') repeat-x;
     padding: 0 15px;
 }
 
@@ -1070,7 +1070,7 @@ div.boosted_game p.boostpoints {
     bottom: 0;
     right: 10px;
     color: #fc0 !important;
-    background: transparent url('/img/chrome/coin.png') no-repeat left;
+    background: transparent url('/img/coin.png') no-repeat left;
 }
 
 div.boosted_game p.boostleader {
@@ -1579,7 +1579,7 @@ ul.avatars_list {
 
 #sidebar div.newfeatures h4 {
     font-size: 16px;
-    background: transparent url('/img/chrome/feature_check.gif') no-repeat top left;
+    background: transparent url('/img/feature_check.gif') no-repeat top left;
     padding-left: 30px;
     line-height: 28px;
 }
@@ -1594,7 +1594,7 @@ ul.avatars_list {
 }
 
 #sidebar div.promo_home {
-    background: url('/img/chrome/promo_bkgd_175.gif') no-repeat top left;
+    background: url('/img/promo_bkgd_175.gif') no-repeat top left;
     width: 175px;
     height: 140px;
     margin: 0;
@@ -1981,7 +1981,7 @@ body.gamepage h4 {
 }
 
 object#game {
-    background: transparent url('/img/chrome/player_bkgd.gif') no-repeat center center;
+    background: transparent url('/img/player_bkgd.gif') no-repeat center center;
 }
 
 div.gameobject {
@@ -1995,7 +1995,7 @@ body.gamepage #content div.sharebar {
     height: 36px;
     clear: both;
     margin-bottom: 10px;
-    background: #333 url('/img/chrome/social_bar_bkgd.gif') repeat-x;
+    background: #333 url('/img/social_bar_bkgd.gif') repeat-x;
 }
 
 body.gamepage #content div.sharebar div.share_buttons {
@@ -2011,7 +2011,7 @@ div.share_buttons a {
     display: inline-block;
     width: 24px;
     height: 24px;
-    background: url('/img/chrome/sharing_icons2.png') transparent 0 0 no-repeat;
+    background: url('/img/sharing_icons2.png') transparent 0 0 no-repeat;
 }
 
 div.share_buttons a.facebook {
@@ -2069,7 +2069,7 @@ body.gamepage .gamerating {
 }
 
 .gametypeinfo {
-    background: transparent url('/img/chrome/ribbons.png') no-repeat left -164px;
+    background: transparent url('/img/ribbons.png') no-repeat left -164px;
     width: 310px;
     height: 82px;
     margin-top: -12px;
@@ -2092,7 +2092,7 @@ body.gamepage .gamerating {
 }
 
 .motd_widget {
-    background: transparent url('/img/chrome/ribbons.png') no-repeat left top;
+    background: transparent url('/img/ribbons.png') no-repeat left top;
     width: 382px;
     height: 82px;
 }
@@ -2124,13 +2124,13 @@ body.gamepage .gamerating {
 
 
 div.bucket.membercontest_winner {
-    background: #123 url('/img/chrome/motd_badge_bkgd.png') no-repeat top left;
+    background: #123 url('/img/motd_badge_bkgd.png') no-repeat top left;
     color: #69a;
     border-color: #345 !important;
 }
 
 div.bucket.membercontest_winner.winner_weekly {
-    background: #606 url('/img/chrome/motd_badge_bkgd.png') no-repeat top left;
+    background: #606 url('/img/motd_badge_bkgd.png') no-repeat top left;
     color: #c4c;
     border-color: #919 !important;
 }
@@ -2178,11 +2178,11 @@ div.bucket.membercontest_winner div.member_badge {
     float: left;
     margin: 0 12px 8px 0;
     text-align: center;
-    background: transparent url('/img/chrome/avatar_pedestal.gif') no-repeat bottom;
+    background: transparent url('/img/avatar_pedestal.gif') no-repeat bottom;
 }
 
 div.bucket.membercontest_winner.winner_weekly div.member_badge {
-    background: transparent url('/img/chrome/avatar_pedestal_bronze.gif') no-repeat bottom;
+    background: transparent url('/img/avatar_pedestal_bronze.gif') no-repeat bottom;
 }
 
 div.bucket.membercontest_winner div.member_badge img {
@@ -2234,7 +2234,7 @@ div.challenge_prompt {
 
 
 .coinage {
-    background: transparent url('/img/chrome/coin.png') no-repeat left;
+    background: transparent url('/img/coin.png') no-repeat left;
     padding-left: 20px;
     font-weight: bold;
 }
