--- a/public/css/treemap.css
+++ b/public/css/treemap.css
@@ -19,7 +19,7 @@ div.treemap a.textnode
     text-align: center;
     width: 100%;
     height: 100%;
-    background-image: url(/img/chrome/textnode-border.gif);
+    background-image: url(/img/textnode-border.gif);
     display: block;
     float: left;
     color: #fff;
@@ -31,7 +31,7 @@ div.treemap a.textnode
 
 div.treemap a.textnode:hover
     {
-    background-image: url(/img/chrome/textnode-border-hover.gif);
+    background-image: url(/img/textnode-border-hover.gif);
     }
 
 div.treemap a.proper
